--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,13 +2,17 @@
 
 <h1>Products</h1>
 
-<div id="products">
-  <% @products.each do |product| %>
-    <%= render product %>
-    <p>
-      <%= link_to "Show this product", product %>
-    </p>
-  <% end %>
-</div>
+<table id="products" border="1">
+  <thead>
+    <th>Name</th>
+    <th>Price</th>
+    <th>Action</th>
+  </thead>
+  <tbody id="products">
+    <% @products.each do |product| %>
+      <%= render product %>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to "New product", new_product_path %>
